[tool.poetry]
name = "gopherus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bandit = "^1.7.10"
mypy = "^1.13.0"
pylint = "^3.3.1"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
